--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute page</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <main>
-        <h1 id="title" >Dr. Norman Borlaug</h1>
+        <h1 id="title" >
+            Dr. Norman Borlaug</h1>
+            <p>The man who saved a billion lives</p>
     </main>
     <footer></footer>
     
