--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <title>Tribute page</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
-    <main>
-        <h1 id="title" >
+<body id="main">
+    <h1 id="title" >
             Dr. Norman Borlaug</h1>
             <p>The man who saved a billion lives</p>
-    </main>
+            <div id="img-div">
+               <img src="./tribute-page-main-image.jpg" alt="Norman image">
+               <p> Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.
+            </p>
+
+            </div>
+  
     <footer></footer>
     
 </body>
