--- a/index.html
+++ b/index.html
@@ -47,9 +47,18 @@
                     <li><strong>2009</strong>- dies at the age of 95.</li>
 
                 </ul>
+<blockquote>
+    <p>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
+    <cite>
+        --Indian Prime Minister Manmohan Singh
+    </cite>
+
+</blockquote>
                 
   
-    <footer></footer>
+    <footer>
+        <a href="https://en.wikipedia.org/wiki/Norman_Borlaug">If you have time, you should read more about this incredible human being on his</a>
+    </footer>
     
 </body>
 </html>
