--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 
   
     <footer>
-        <a href="https://en.wikipedia.org/wiki/Norman_Borlaug">If you have time, you should read more about this incredible human being on his</a>
+       <h3>If you have time, you should read more about this incredible human being on his</h3>
+     <a id="tribute link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">wikipedia entry</a>
     </footer>
     
 </body>
