npm install hint@6.x and npm install stylelint

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </figure>
             <section id="tribute-info">
                 <br>
-                <h3 id="sub title">Here's a time line of Dr. Borlaug's life:</h3>
+                <h3 id="subtitle">Here's a time line of Dr. Borlaug's life:</h3>
                 <ul>
                     <li><strong>1914</strong> - Born in Cresco, Iowa</li>
                     <li><strong>1933</strong> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
@@ -47,6 +47,7 @@
                     <li><strong>2009</strong>- dies at the age of 95.</li>
 
                 </ul>
+                </section>
 <blockquote>
     <p>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
     <cite>
@@ -58,7 +59,7 @@
   
     <footer>
        <h3>If you have time, you should read more about this incredible human being on his</h3>
-     <a id="tribute link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">wikipedia entry</a>
+    <a id="tributelink" rel="noopener" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">wikipedia entry</a>
     </footer>
     
 </body>
